--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "sirv": "^0.4.0"
     },
     "devDependencies": {
-        "npm-run-all": "^4.1.5",
         "rollup": "^1.12.0",
         "rollup-plugin-commonjs": "^10.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
@@ -22,6 +21,7 @@
         "rollup-plugin-svelte": "^5.0.1",
         "rollup-plugin-terser": "^4.0.4",
         "sapper": "^0.27.0",
-        "svelte": "^3.0.0"
+        "svelte": "^3.0.0",
+        "watercolor-canvas": "^1.1.1"
     }
 }
