--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dependencies": {
         "compression": "^1.7.1",
         "polka": "^0.5.0",
+        "serve": "^11.1.0",
         "sirv": "^0.4.0"
     },
     "devDependencies": {
+        "@glidejs/glide": "^3.3.0",
         "rollup": "^1.12.0",
         "rollup-plugin-commonjs": "^10.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
@@ -21,7 +23,6 @@
         "rollup-plugin-svelte": "^5.0.1",
         "rollup-plugin-terser": "^4.0.4",
         "sapper": "^0.27.0",
-        "svelte": "^3.0.0",
-        "watercolor-canvas": "^1.1.1"
+        "svelte": "^3.0.0"
     }
 }
