--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "compression": "^1.7.1",
         "polka": "^0.5.0",
+        "prismjs": "^1.17.1",
         "serve": "^11.1.0",
         "sirv": "^0.4.0"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.11.2",
         "@glidejs/glide": "^3.3.0",
         "rollup": "^1.12.0",
         "rollup-plugin-commonjs": "^10.0.0",
