--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
         "@glidejs/glide": "^3.3.0",
+        "eslint": "^6.6.0",
+        "eslint-plugin-svelte3": "^2.7.3",
         "rollup": "^1.12.0",
         "rollup-plugin-commonjs": "^10.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
