--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@glidejs/glide": "^3.3.0",
         "eslint": "^6.6.0",
         "eslint-plugin-svelte3": "^2.7.3",
+        "linkinator": "^1.7.1",
         "rollup": "^1.12.0",
         "rollup-plugin-commonjs": "^10.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
