--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "start": "node __sapper__/build"
     },
     "dependencies": {
+        "@rollup/plugin-commonjs": "^11.0.2",
+        "@rollup/plugin-node-resolve": "^7.1.1",
+        "@rollup/plugin-replace": "^2.3.1",
         "compression": "^1.7.1",
         "polka": "^0.5.0",
         "prismjs": "^1.17.1",
@@ -20,13 +23,10 @@
         "@glidejs/glide": "^3.3.0",
         "eslint": "^6.6.0",
         "eslint-plugin-svelte3": "^2.7.3",
-        "linkinator": "^1.7.1",
+        "linkinator": "^2.0.1",
         "rollup": "^1.12.0",
-        "rollup-plugin-commonjs": "^10.0.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-replace": "^2.0.0",
         "rollup-plugin-svelte": "^5.0.1",
-        "rollup-plugin-terser": "^4.0.4",
+        "rollup-plugin-terser": "^5.2.0",
         "sapper": "^0.27.0",
         "svelte": "^3.0.0"
     }
