--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@rollup/plugin-node-resolve": "^7.1.1",
         "@rollup/plugin-replace": "^2.3.1",
         "compression": "^1.7.1",
+        "marked": "^0.8.0",
         "polka": "^0.5.0",
         "prismjs": "^1.17.1",
         "serve": "^11.1.0",
